<resources>
    <string name="app_name">Zdrowy Człowiek</string>
    <string name="language">PL</string>

    <string name="welcome_text">ZDROWY CZŁOWIEK</string>
    <string name="login_fb">Zaloguj przez Facebooka</string>
    <string name="login_google">Zaloguj przez Googla</string>
    <string name="age">Wiek</string>
    <string name="weight">Waga</string>
    <string name="Height">Wzrost</string>
    <string name="Gender">Płeć</string>
    <string name="age_hint">Wpisz wiek</string>
    <string name="weight_hint">Wpisz wagę (kg)</string>
    <string name="Height_hint">Wpisz wzrost (cm)</string>
    <string name="Man">Mężczyzna</string>
    <string name="Women">Kobieta</string>
    <string name="Next">Dalej</string>
    <string name="Reduction">Redukcja</string>
    <string name="muscleMass">Masa mięśniowa</string>
    <string name="trainingAmator">Trening początkujący</string>
    <string name="trainingSemiProfessional">Trening średnio-zaawansowany</string>
    <string name="trainingProfessional">Trening Zaawansowany</string>
    <string name="submit">PODSUMOWANIE:</string>
    <string name="training">Trening:  </string>
    <string name="diet">Dieta: </string>
    <string name="BMI">BMI: </string>
    <string name="freeDay">Codzień: </string>
    <string name="end">Zakończ</string>
    <string name="youKcal">Twoje zapotrzebowanie:</string>

    <string name="facebook_app_id">4377313415621019</string>
    <string name="fb_login_protocol_scheme">fb4377313415621019</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_Logout">Wyloguj</string>
    <string name="currentWeight">"Obecna waga: "</string>
    <string name="maxWeight">"Największa Waga: "</string>
    <string name="minWeight">"Najmniejsza Waga: "</string>
    <string name="kcalNormal">Zapotrzebowanie kcal codzień :</string>
    <string name="kcalTraining">Zapotrzebowanie kcal trening :</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="permission_denied">Wymagany dostęp do lokalizacji</string>

    <string-array name="diet">
        <item>Dieta</item>
        <item>Redukcja</item>
        <item>Masa mięśniowa</item>

    </string-array>

    <string-array name="training">
        <item>Trening</item>
        <item>Początkujący</item>
        <item>Pół-zaawansowany</item>
        <item>Zaawansowany</item>

    </string-array>

    <string-array name="gender">
        <item>Płeć</item>
        <item>Mężczyzna</item>
        <item>Kobieta</item>

    </string-array>

    <string name="banner_ad_unit_id">ca-app-pub-6555234985187895/1926219059</string>


    <string name="NEWS_CHANNEL_ID">news</string>
    <string name="CHANNEL_NEWS">News</string>
    <string name="CHANNEL_DESCRIPTION">Get informed with new updates</string>
    <string name="deleteChart">Wyzeruj wykres</string>
    <string name="producentsInfoMenu"><![CDATA[Producents&Assets]]></string>
    <string name="private_policy">Privacy Policy</string>
    <string name="updateMenuInfo">Aktualności</string>
    <string name="sprinter">Biegacz</string>
    <string name="chart">Wykres</string>
    <string name="settings">Ustawienia</string>
    <string name="water">Popijacz</string>
    <string name="startingPage1">Dane 1/4</string>
    <string name="startingPage4">Dane 4/4</string>
    <string name="startingPage3">Dane 3/3</string>
    <string name="startingPage2">Dane 2/4</string>
    <string name="loginLAbel">Logowanie</string>
    <string name="default_web_client_id">721939246635-kg3n755bsfb024af95r6aaa2rk8oet49.apps.googleusercontent.com</string>
    <string name="HeightCurrent">"Wzrost: "</string>
    <string name="day">Dzień</string>
    <string name="share_icon">Share</string>


</resources>
