<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sm.healthy_man.StartingPage1">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/toolbar_main" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/pattern1"
            android:layout_above="@+id/adView"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">



                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/start1" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/weight"
                        android:textColor="#000000"
                        android:textSize="28dp" />

                    <EditText
                        android:id="@+id/Weight"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:hint="@string/weight_hint"
                        android:inputType="phone"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/Height"
                        android:textColor="#000000"
                        android:textSize="28dp" />

                    <EditText
                        android:id="@+id/Height"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:hint="@string/Height_hint"
                        android:inputType="phone"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/age"
                        android:textColor="#000000"
                        android:textSize="28dp" />


                    <NumberPicker
                        android:id="@+id/numberPickerAge"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_gravity="center
"
                        android:gravity="center" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/Gender"
                        android:textColor="#000000"
                        android:textSize="28dp" />

                    <RadioGroup
                        android:id="@+id/Gender_radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/Gender_radio_button_man"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/Man"
                            android:textSize="18dp" />

                        <RadioButton
                            android:id="@+id/Gender_radio_button_wowem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/Women"
                            android:textSize="18dp" />

                    </RadioGroup>


                    <Button
                        android:layout_width="125dp"
                        android:layout_height="45dp"
                        android:layout_gravity="right"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/next"
                        android:id="@+id/goNext"
                        android:textColor="#000000"
                        android:layout_marginBottom="60dp"
                        android:textSize="18dp" />


                </LinearLayout>


        </ScrollView>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:adSize="BANNER"
            app:adUnitId="@string/banner_ad_unit_id"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>


    </RelativeLayout>


</LinearLayout>