<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sm.healthy_man.SettingsActivity">

    <include
        layout="@layout/toolbar_main"
        android:id="@+id/toolbar_main"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/pattern1"
            android:layout_above="@+id/adView"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/age"
                        android:textSize="30dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_margin="10dp"
                        android:textColor="#000000"/>

                    <NumberPicker
                        android:layout_width="150dp"
                        android:id="@+id/numberPickerAge"
                        android:layout_height="125dp"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_margin="10dp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/Height"
                        android:textSize="30dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_margin="10dp"
                        android:textColor="#000000"/>

                    <NumberPicker
                        android:id="@+id/numberPickerHeight"
                        android:layout_width="150dp"
                        android:layout_height="125dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center" />


                </LinearLayout>



                <Spinner
                    android:id="@+id/trainingList"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="70dp"
                    android:entries="@array/training" />

                <Spinner
                    android:id="@+id/dietList"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="70dp"
                    android:entries="@array/diet" />

                <Spinner
                    android:id="@+id/genderList"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="70dp"
                    android:entries="@array/gender" />

                <Button
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_marginTop="20dp"
                    android:id="@+id/settingButton"
                    android:background="@drawable/confirm"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>


        </ScrollView>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:adSize="BANNER"
            app:adUnitId="@string/banner_ad_unit_id"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>

    </RelativeLayout>





</LinearLayout>